Fixed parsing disc number in Vorbis comments.

De facto standard for storing the disc number is the comment tag
 `DISCNUMBER' and not `DISCNO'. Tag `DISCNO' still takes priority to
 not break the current behaviour. Fixed for both, Vorbis comments in
 vorbis and FLAC files.

 Fixing: https://bugzilla.gnome.org/show_bug.cgi?id=681698